# CHANGE LOG

All notable changes to this project will be documented in this file.

This project adheres to [Semantic Versioning](http://semver.org).

This document is formatted according to the principles of [Keep A CHANGELOG](http://keepachangelog.com).

----
## [7.0.0] - Not released, in Git

### Added

* Populate the `Pickle#id` field with a SHA1 hash of the source + line + column.

### Changed

### Deprecated

### Removed

### Fixed

* [TypeScript] ExeFile not a constructor
  ([#641](https://github.com/cucumber/cucumber/pull/641)
   [#634](https://github.com/cucumber/cucumber/issues/634)
   [joscha])

* [Java,TypeScript] Fix parsing of long documents.
  ([#566](https://github.com/cucumber/cucumber/issues/566)
   [aslakhellesoy])

## [6.0.17] - 2019-03-31

### Changed

* Upgrade to cucumber-messages 2.1.2

## [6.0.15] - 2018-10-31

### Added
* (Go) Executables are uploaded to GitHub releases.

### Fixed
* Fix bug where leading tabs prevented parser from identifying keywords
  ([#512](https://github.com/cucumber/cucumber/pull/512) [VjacheslavVytjagov])
* [JavaScript] Fix JavaScript build
  ([#499](https://github.com/cucumber/cucumber/pull/499)
   [noisygerman])

## [6.0.13] - 2018-09-25

This major release aligns Gherkin with [Example Mapping](https://cucumber.io/blog/2015/12/08/example-mapping-introduction),
a collaborative technique for *designing* scenarios and discovering details
about rules and behaviour.

A new `Rule` keyword has been introduced, and acts as a grouping of one or more
`Example`s - a new synonym for `Scenario`. The `Scenario Outline` keyword can now
be interchanged with the `Scenario` keyword, which makes Gherkin a little less confusing,
especially to beginners. These are the first major change to the
Gherkin grammar in 8 years or so, and we're pretty excited about them. We hope they will
guide people towards thinking of scenarios as *examples of business rules*
rather than a series of form submissions and link clicking. This rule-focused