@@ -4014,7 +4014,10 @@ func (m *TestResult) GetDurationNanoseconds() uint64 {
 }
 
 type TestRunFinished struct {
+	// success = StrictModeEnabled ? (failed_count == 0 && ambiguous_count == 0 && undefined_count == 0 && pending_count == 0) : (failed_count == 0 && ambiguous_count == 0)
 	Success bool `protobuf:"varint,1,opt,name=success,proto3" json:"success,omitempty"`
+	// Timestamp when the TestRun is finished
+	Timestamp *types.Timestamp `protobuf:"bytes,2,opt,name=timestamp,proto3" json:"timestamp,omitempty"`
 }
 
 func (m *TestRunFinished) Reset()         { *m = TestRunFinished{} }
@@ -4055,6 +4058,13 @@ func (m *TestRunFinished) GetSuccess() bool {
 		return m.Success
 	}
 	return false
+}
+
+func (m *TestRunFinished) GetTimestamp() *types.Timestamp {
+	if m != nil {
+		return m.Timestamp
+	}
+	return nil
 }
 
 type CommandStart struct {
@@ -5462,7 +5472,7 @@ func init() {
 func init() { proto.RegisterFile("messages.proto", fileDescriptor_4dc296cbfe5ffcd5) }
 
 var fileDescriptor_4dc296cbfe5ffcd5 = []byte{
-	// 3138 bytes of a gzipped FileDescriptorProto
+	// 3140 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xdc, 0x5a, 0xcd, 0x6f, 0x1b, 0xc7,
 	0xd9, 0xe7, 0x92, 0x4b, 0x8a, 0x7c, 0x2c, 0xc9, 0xf4, 0x58, 0x76, 0x68, 0xc6, 0x50, 0xf4, 0x6e,
 	0x12, 0xc7, 0xaf, 0x93, 0x97, 0x7e, 0xe3, 0x37, 0xd0, 0xeb, 0x1a, 0x09, 0x62, 0x89, 0xa4, 0x44,
@@ -5597,69 +5607,69 @@ var fileDescriptor_4dc296cbfe5ffcd5 = []byte{
 	0xda, 0xea, 0xee, 0xbd, 0xdd, 0x6e, 0x35, 0x87, 0x00, 0x4a, 0x2b, 0x4b, 0x6b, 0x1b, 0xed, 0x56,
 	0x55, 0xa2, 0xff, 0xb7, 0x97, 0xba, 0xdd, 0x76, 0xab, 0x9a, 0x47, 0xe7, 0x60, 0x6a, 0xbb, 0xbd,
 	0xd5, 0x5a, 0xdb, 0x5a, 0xad, 0x16, 0x68, 0xa3, 0xfb, 0xd5, 0xb5, 0xed, 0xed, 0x76, 0xab, 0x2a,
-	0x53, 0x80, 0xdd, 0xad, 0x56, 0x7b, 0x65, 0x6d, 0xab, 0xdd, 0xaa, 0x16, 0x95, 0x57, 0x83, 0xb9,
-	0x10, 0xbf, 0x07, 0xaf, 0xc1, 0x94, 0xeb, 0x6b, 0x1a, 0x71, 0x03, 0xd3, 0xcb, 0x58, 0x34, 0x95,
-	0x5f, 0xe4, 0x61, 0x3a, 0x7e, 0xf1, 0x8d, 0x5e, 0x82, 0x99, 0x7d, 0xd5, 0x25, 0x2d, 0xdd, 0x21,
-	0x9a, 0x67, 0x39, 0x47, 0xdc, 0xd2, 0x24, 0x11, 0xad, 0xc1, 0x4c, 0xb0, 0xae, 0xb8, 0x4d, 0xcb,
-	0x3c, 0xd0, 0xfb, 0x3c, 0x2e, 0x2f, 0x66, 0x2d, 0x22, 0x9c, 0x15, 0x27, 0x25, 0x29, 0x94, 0xe3,
-	0x9b, 0x34, 0x68, 0x1c, 0x4a, 0xce, 0x82, 0xc2, 0x71, 0x56, 0x9c, 0x94, 0x44, 0xbb, 0x70, 0xc1,
-	0xf5, 0x6d, 0xdb, 0x72, 0xbc, 0xa6, 0xd5, 0x13, 0x70, 0xc1, 0x96, 0x77, 0x4c, 0xac, 0xbb, 0xc3,
-	0xec, 0x78, 0x14, 0x41, 0xf9, 0x5c, 0x82, 0x99, 0x84, 0x09, 0xd4, 0x49, 0xea, 0xbe, 0x6b, 0x19,
-	0xbe, 0x47, 0xb6, 0x55, 0xef, 0x30, 0xd8, 0x37, 0x55, 0x70, 0x92, 0x98, 0xa8, 0x85, 0xf2, 0x43,
-	0xb5, 0x50, 0x13, 0xa6, 0x0e, 0x74, 0xc3, 0x23, 0x8e, 0xcb, 0x5d, 0xf7, 0xdf, 0x99, 0xae, 0x5b,
-	0x61, 0xbc, 0x5c, 0x45, 0x21, 0x89, 0x6e, 0x43, 0xd1, 0x72, 0x7a, 0xbc, 0xd0, 0x1c, 0xfb, 0xae,
-	0x81, 0x43, 0xdc, 0xa3, 0x9c, 0x38, 0x10, 0x50, 0xfe, 0x24, 0xc1, 0xc5, 0x14, 0x68, 0x6a, 0x98,
-	0xa7, 0xf6, 0xdb, 0x8f, 0x6c, 0x87, 0xb8, 0x6e, 0xb4, 0x32, 0x25, 0x89, 0x68, 0x11, 0x2e, 0xd3,
-	0xd2, 0x05, 0x93, 0xbe, 0x6f, 0xa8, 0x4e, 0xd4, 0x11, 0xac, 0xea, 0x15, 0x3c, 0xa6, 0x97, 0xc6,
-	0xc7, 0x77, 0xf4, 0x1d, 0x6b, 0x43, 0x37, 0x89, 0xbb, 0xa9, 0xda, 0x36, 0xad, 0x13, 0x0a, 0x59,
-	0xc5, 0xe0, 0xee, 0x30, 0x3b, 0x1e, 0x45, 0x50, 0x36, 0xe1, 0xc2, 0x08, 0x1f, 0x52, 0x60, 0x3a,
-	0x1e, 0x0d, 0x6e, 0x48, 0x82, 0x46, 0xf3, 0xb8, 0x41, 0x65, 0x98, 0xda, 0x32, 0x0e, 0x1a, 0xca,
-	0x37, 0x60, 0x3a, 0xee, 0x32, 0x56, 0x77, 0xd2, 0xdd, 0x7c, 0x90, 0x34, 0xae, 0x1d, 0xef, 0x64,
-	0xba, 0xd1, 0xc7, 0x4c, 0x86, 0x56, 0x73, 0x2e, 0x21, 0xc1, 0xce, 0x51, 0xc6, 0xec, 0xbf, 0xf2,
-	0xb1, 0x04, 0x33, 0x89, 0x69, 0x8c, 0xe6, 0x01, 0x74, 0x77, 0x45, 0xd5, 0x8d, 0x15, 0xd5, 0xf5,
-	0xf8, 0x17, 0x1a, 0xa3, 0xd0, 0x89, 0xa4, 0xbb, 0x2d, 0xe7, 0x08, 0xfb, 0xc1, 0x4e, 0xa0, 0x8c,
-	0xc3, 0x76, 0xd0, 0x47, 0x4b, 0x17, 0x2d, 0x58, 0x73, 0x58, 0x5f, 0xd0, 0xa6, 0xe5, 0xc8, 0x40,
-	0x7d, 0xb4, 0xad, 0x3a, 0xaa, 0x61, 0x10, 0x83, 0xcd, 0x12, 0x19, 0xc7, 0x49, 0xca, 0xe3, 0x02,
-	0x5c, 0x18, 0xf9, 0x06, 0xd0, 0xf7, 0x24, 0x78, 0x71, 0x7f, 0xe4, 0xe5, 0x44, 0x8b, 0x1c, 0xe8,
-	0xa6, 0x1e, 0x3c, 0x58, 0xa1, 0x6c, 0xa2, 0x5a, 0xb8, 0x95, 0xbd, 0x29, 0x4a, 0x13, 0xc5, 0x27,
-	0x81, 0x47, 0xdf, 0x95, 0x40, 0x51, 0x87, 0x1f, 0x3b, 0x8c, 0x6a, 0x91, 0x3f, 0xb5, 0x16, 0x27,
-	0x40, 0x47, 0x1f, 0xc0, 0x25, 0xba, 0xef, 0x1c, 0x1d, 0xb6, 0x90, 0xb5, 0x81, 0xed, 0xa6, 0x88,
-	0xe0, 0x74, 0x20, 0xf4, 0x00, 0xe6, 0x6c, 0xd5, 0x51, 0x07, 0xc4, 0x0b, 0xa6, 0x8e, 0x18, 0x40,
-	0x66, 0x03, 0x8c, 0xc9, 0x0b, 0xdb, 0xa3, 0x12, 0x38, 0x15, 0x46, 0xf9, 0x44, 0x82, 0xab, 0x59,
-	0x26, 0x8e, 0x1c, 0xf4, 0x8c, 0xe4, 0x80, 0x7c, 0x5a, 0x0e, 0x58, 0x8a, 0x15, 0x6d, 0x85, 0x49,
-	0x2a, 0x88, 0xe8, 0x35, 0xc4, 0x67, 0x12, 0xcc, 0xa5, 0x39, 0x6a, 0x44, 0xa3, 0x36, 0x4c, 0xd9,
-	0xaa, 0xe7, 0x11, 0x47, 0x14, 0x2b, 0xaf, 0x9e, 0xc4, 0xeb, 0xdb, 0x81, 0x08, 0x16, 0xb2, 0x4f,
-	0x43, 0x65, 0x0f, 0x2e, 0xa5, 0x0e, 0x82, 0x2e, 0x27, 0x8e, 0xef, 0x2a, 0xe1, 0xb9, 0x5c, 0x93,
-	0x27, 0x8f, 0x3c, 0x4b, 0x1e, 0x37, 0x27, 0xd0, 0x3b, 0xca, 0x22, 0xca, 0x9f, 0x25, 0xb8, 0x98,
-	0x12, 0xf0, 0xf0, 0x38, 0x49, 0x8a, 0x1d, 0xc0, 0x35, 0x00, 0x39, 0xe3, 0xf2, 0x72, 0x4a, 0x0f,
-	0xea, 0xc0, 0x0b, 0xb6, 0x43, 0x2d, 0x5d, 0xb1, 0x9c, 0x91, 0x94, 0xbd, 0xa9, 0x7a, 0xda, 0x21,
-	0x4f, 0x2b, 0xc7, 0xb1, 0xd1, 0xb2, 0xc6, 0x77, 0xc9, 0x8a, 0xe5, 0xf0, 0x77, 0x3b, 0x2e, 0x4b,
-	0x38, 0x65, 0x3c, 0x44, 0x55, 0x3e, 0x95, 0xe0, 0x52, 0xea, 0xc3, 0xb8, 0xe0, 0xf8, 0x24, 0xf8,
-	0xdf, 0x0b, 0xb7, 0x92, 0x71, 0x12, 0x5a, 0x3e, 0xcd, 0x6e, 0xb2, 0x93, 0x4b, 0xec, 0x27, 0xeb,
-	0x30, 0xe5, 0xf2, 0x77, 0x4a, 0x05, 0xfe, 0x92, 0x48, 0x10, 0x96, 0xcb, 0x50, 0x72, 0x82, 0x9a,
-	0xe4, 0x0e, 0x5c, 0xcd, 0x7a, 0x51, 0x47, 0xf3, 0x6e, 0x50, 0x0a, 0x47, 0x7b, 0x5e, 0xd1, 0x56,
-	0xbe, 0x02, 0xcf, 0x67, 0x3c, 0xab, 0xca, 0x14, 0x75, 0xe1, 0xca, 0xd8, 0x17, 0x75, 0x59, 0x82,
-	0xe8, 0x8d, 0x49, 0x9e, 0x3e, 0x8b, 0x87, 0xcf, 0xeb, 0x72, 0x39, 0x5f, 0x2d, 0x28, 0x3f, 0x93,
-	0xd2, 0x8d, 0x0d, 0x1f, 0x98, 0x65, 0x0d, 0x7c, 0x07, 0x6a, 0x5e, 0x6a, 0x7a, 0x59, 0x13, 0x57,
-	0x6a, 0x63, 0xfb, 0x13, 0x85, 0x83, 0x9c, 0x2c, 0x1c, 0xb8, 0x6a, 0x9f, 0x48, 0xa9, 0xbe, 0xfc,
-	0x12, 0x68, 0xf6, 0xab, 0x3c, 0xa0, 0xd1, 0x87, 0x81, 0x99, 0x0a, 0xdd, 0x80, 0x6a, 0x72, 0x09,
-	0x08, 0x15, 0x19, 0xa1, 0xa3, 0x75, 0x98, 0xe5, 0x79, 0x8b, 0x7d, 0x5d, 0x44, 0xac, 0x07, 0xca,
-	0xb8, 0xf5, 0x20, 0xe2, 0xc5, 0x43, 0x92, 0x09, 0x63, 0x8a, 0x43, 0xf5, 0xd9, 0xbb, 0x80, 0xec,
-	0x91, 0x73, 0x3d, 0x7e, 0x69, 0x74, 0xf2, 0x73, 0xe2, 0x14, 0x0c, 0xee, 0xa6, 0x1e, 0x4c, 0xc7,
-	0x75, 0xa3, 0xba, 0x68, 0xaa, 0xed, 0xf9, 0x0e, 0x11, 0xbb, 0xe6, 0xb0, 0x8d, 0x5e, 0x83, 0x0b,
-	0x89, 0x25, 0x6c, 0x2b, 0x3a, 0x2b, 0x1f, 0xed, 0x48, 0x9c, 0x48, 0xff, 0x53, 0x82, 0xcb, 0xe9,
-	0xef, 0x0a, 0x33, 0x03, 0xf2, 0x00, 0xe6, 0xfa, 0x9c, 0xbd, 0x37, 0x9c, 0x2e, 0xc7, 0x2e, 0xbd,
-	0xab, 0xa3, 0x12, 0x38, 0x15, 0x66, 0x8c, 0x6f, 0x8b, 0x4f, 0xc5, 0xb7, 0x91, 0xed, 0xf7, 0xe1,
-	0x62, 0x8a, 0x4a, 0xa9, 0x17, 0x09, 0x0d, 0x40, 0x23, 0x7e, 0x0c, 0x17, 0x87, 0xd1, 0x9e, 0x1b,
-	0xff, 0x0f, 0xd5, 0xe1, 0x8d, 0x2d, 0x7a, 0x0e, 0x2e, 0xde, 0xc3, 0xad, 0x36, 0xde, 0xbb, 0xb7,
-	0xb2, 0xc7, 0x8a, 0xce, 0xb5, 0x9d, 0xb5, 0x7b, 0x5b, 0x41, 0xe1, 0x8a, 0x97, 0xb6, 0x5a, 0xf7,
-	0x36, 0xab, 0xd2, 0x8d, 0x0d, 0xb8, 0x32, 0x76, 0x51, 0xa3, 0x08, 0xcd, 0xdd, 0xe6, 0xee, 0xe6,
-	0x72, 0x1b, 0xef, 0xb5, 0xdf, 0xdd, 0xc6, 0xed, 0x6e, 0x37, 0x40, 0xb8, 0x0c, 0x08, 0xb7, 0x57,
-	0x77, 0x37, 0x96, 0x12, 0x74, 0x69, 0x79, 0xf1, 0x0f, 0x4f, 0xe6, 0xa5, 0xcf, 0x9f, 0xcc, 0x4b,
-	0x8f, 0x9f, 0xcc, 0x4b, 0x3f, 0xfc, 0x62, 0x3e, 0xf7, 0xf9, 0x17, 0xf3, 0xb9, 0xbf, 0x7c, 0x31,
-	0x9f, 0x7b, 0xaf, 0x2c, 0x1c, 0xf7, 0xd7, 0xfc, 0x85, 0xa6, 0x70, 0xe6, 0x26, 0xa7, 0xed, 0x97,
-	0xd8, 0xf1, 0xc0, 0xff, 0xfd, 0x3b, 0x00, 0x00, 0xff, 0xff, 0xa1, 0xa1, 0x18, 0xf4, 0xf6, 0x32,
-	0x00, 0x00,
+	0x53, 0x80, 0xdd, 0xad, 0x56, 0x7b, 0x65, 0x6d, 0xab, 0xdd, 0xaa, 0x16, 0x15, 0x12, 0xcc, 0x85,
+	0xf8, 0x3d, 0x78, 0x0d, 0xa6, 0x5c, 0x5f, 0xd3, 0x88, 0x1b, 0x98, 0x5e, 0xc6, 0xa2, 0x79, 0x86,
+	0x99, 0xf0, 0x8b, 0x3c, 0x4c, 0xc7, 0xaf, 0xcc, 0xd1, 0x4b, 0x30, 0xb3, 0xaf, 0xba, 0xa4, 0xa5,
+	0x3b, 0x44, 0xf3, 0x2c, 0xe7, 0x88, 0xfb, 0x28, 0x49, 0x44, 0x6b, 0x30, 0x13, 0xac, 0x48, 0x6e,
+	0xd3, 0x32, 0x0f, 0xf4, 0x3e, 0x8f, 0xe8, 0x8b, 0x59, 0xcb, 0x0f, 0x67, 0xc5, 0x49, 0x49, 0x0a,
+	0xe5, 0xf8, 0x26, 0xd5, 0x88, 0x43, 0xc9, 0x59, 0x50, 0x38, 0xce, 0x8a, 0x93, 0x92, 0x68, 0x17,
+	0x2e, 0xb8, 0xbe, 0x6d, 0x5b, 0x8e, 0xd7, 0xb4, 0x7a, 0x02, 0x2e, 0xd8, 0x2c, 0x8f, 0x99, 0x25,
+	0xdd, 0x61, 0x76, 0x3c, 0x8a, 0xa0, 0x7c, 0x2e, 0xc1, 0x4c, 0xc2, 0x04, 0xea, 0x24, 0x75, 0xdf,
+	0xb5, 0x0c, 0xdf, 0x23, 0xdb, 0xaa, 0x77, 0x18, 0xec, 0xb8, 0x2a, 0x38, 0x49, 0x4c, 0x54, 0x51,
+	0xf9, 0xa1, 0x2a, 0xaa, 0x09, 0x53, 0x07, 0xba, 0xe1, 0x11, 0xc7, 0xe5, 0xae, 0xfb, 0xef, 0x4c,
+	0xd7, 0xad, 0x30, 0x5e, 0xae, 0xa2, 0x90, 0x44, 0xb7, 0xa1, 0x68, 0x39, 0x3d, 0x5e, 0xa2, 0x8e,
+	0x7d, 0x11, 0xc1, 0x21, 0xee, 0x51, 0x4e, 0x1c, 0x08, 0x28, 0x7f, 0x92, 0xe0, 0x62, 0x0a, 0x34,
+	0x35, 0xcc, 0x53, 0xfb, 0xed, 0x47, 0xb6, 0x43, 0x5c, 0x37, 0x5a, 0xd3, 0x92, 0x44, 0xb4, 0x08,
+	0x97, 0x69, 0xd1, 0x83, 0x49, 0xdf, 0x37, 0x54, 0x27, 0xea, 0x08, 0xf6, 0x03, 0x15, 0x3c, 0xa6,
+	0x97, 0xc6, 0xc7, 0x77, 0xf4, 0x1d, 0x6b, 0x43, 0x37, 0x89, 0xbb, 0xa9, 0xda, 0x36, 0xad, 0x30,
+	0x0a, 0x59, 0x65, 0xe4, 0xee, 0x30, 0x3b, 0x1e, 0x45, 0x50, 0x36, 0xe1, 0xc2, 0x08, 0x1f, 0x52,
+	0x60, 0x3a, 0x1e, 0x0d, 0x6e, 0x48, 0x82, 0x46, 0x57, 0x00, 0x83, 0xca, 0x30, 0xb5, 0x65, 0x1c,
+	0x34, 0x94, 0x6f, 0xc0, 0x74, 0xdc, 0x65, 0xac, 0x62, 0xa5, 0x75, 0x40, 0x90, 0x6e, 0xae, 0x1d,
+	0xef, 0x64, 0x5a, 0x22, 0x60, 0x26, 0x43, 0xeb, 0x40, 0x97, 0x90, 0x60, 0xcf, 0x29, 0x63, 0xf6,
+	0x5f, 0xf9, 0x58, 0x82, 0x99, 0xc4, 0x34, 0x46, 0xf3, 0x00, 0xba, 0xbb, 0xa2, 0xea, 0xc6, 0x8a,
+	0xea, 0x7a, 0xfc, 0xdb, 0x8e, 0x51, 0xe8, 0x44, 0xd2, 0xdd, 0x96, 0x73, 0x84, 0xfd, 0x60, 0x0f,
+	0x51, 0xc6, 0x61, 0x3b, 0xe8, 0xa3, 0x45, 0x8f, 0x16, 0xac, 0x56, 0xac, 0x2f, 0x68, 0xd3, 0x42,
+	0x66, 0xa0, 0x3e, 0xda, 0x56, 0x1d, 0xd5, 0x30, 0x88, 0xc1, 0x66, 0x89, 0x8c, 0xe3, 0x24, 0xe5,
+	0x71, 0x01, 0x2e, 0x8c, 0x7c, 0x03, 0xe8, 0x7b, 0x12, 0xbc, 0xb8, 0x3f, 0xf2, 0xe6, 0xa2, 0x45,
+	0x0e, 0x74, 0x53, 0x0f, 0x9e, 0xba, 0x50, 0x36, 0x51, 0x67, 0xdc, 0xca, 0xde, 0x4e, 0xa5, 0x89,
+	0xe2, 0x93, 0xc0, 0xa3, 0xef, 0x4a, 0xa0, 0xa8, 0xc3, 0xcf, 0x24, 0x46, 0xb5, 0xc8, 0x9f, 0x5a,
+	0x8b, 0x13, 0xa0, 0xa3, 0x0f, 0xe0, 0x12, 0xdd, 0xb1, 0x8e, 0x0e, 0x5b, 0xc8, 0xda, 0xfa, 0x76,
+	0x53, 0x44, 0x70, 0x3a, 0x10, 0x7a, 0x00, 0x73, 0xb6, 0xea, 0xa8, 0x03, 0xe2, 0x05, 0x53, 0x47,
+	0x0c, 0x20, 0xb3, 0x01, 0xc6, 0xe4, 0x85, 0xed, 0x51, 0x09, 0x9c, 0x0a, 0xa3, 0x7c, 0x22, 0xc1,
+	0xd5, 0x2c, 0x13, 0x47, 0x8e, 0x88, 0x46, 0x72, 0x40, 0x3e, 0x2d, 0x07, 0x2c, 0xc5, 0xca, 0xbd,
+	0xc2, 0x24, 0xb5, 0x47, 0xf4, 0x8e, 0xe2, 0x33, 0x09, 0xe6, 0xd2, 0x1c, 0x35, 0xa2, 0x51, 0x1b,
+	0xa6, 0x6c, 0xd5, 0xf3, 0x88, 0x23, 0xca, 0x9c, 0x57, 0x4f, 0xe2, 0xf5, 0xed, 0x40, 0x04, 0x0b,
+	0xd9, 0xa7, 0xa1, 0xb2, 0x07, 0x97, 0x52, 0x07, 0x41, 0x97, 0x13, 0x07, 0x7f, 0x95, 0xf0, 0x44,
+	0xaf, 0xc9, 0x93, 0x47, 0x9e, 0x25, 0x8f, 0x9b, 0x13, 0xe8, 0x1d, 0x65, 0x11, 0xe5, 0xcf, 0x12,
+	0x5c, 0x4c, 0x09, 0x78, 0x78, 0x10, 0x25, 0xc5, 0x8e, 0xee, 0x1a, 0x80, 0x9c, 0x71, 0x79, 0x39,
+	0xa5, 0x07, 0x75, 0xe0, 0x05, 0xdb, 0xa1, 0x96, 0xae, 0x58, 0xce, 0x48, 0xca, 0xde, 0x54, 0x3d,
+	0xed, 0x90, 0xa7, 0x95, 0xe3, 0xd8, 0x68, 0x41, 0xe4, 0xbb, 0x64, 0xc5, 0x72, 0xf8, 0x8b, 0x1f,
+	0x97, 0x25, 0x9c, 0x32, 0x1e, 0xa2, 0x2a, 0x9f, 0x4a, 0x70, 0x29, 0xf5, 0x49, 0x5d, 0x70, 0xf0,
+	0x12, 0xfc, 0xef, 0x85, 0x9b, 0xd0, 0x38, 0x09, 0x2d, 0x9f, 0x66, 0x1f, 0xda, 0xc9, 0x25, 0x76,
+	0xa2, 0x75, 0x98, 0x72, 0xf9, 0x0b, 0xa7, 0x02, 0x7f, 0x83, 0x24, 0x08, 0xcb, 0x65, 0x28, 0x39,
+	0x41, 0x35, 0x73, 0x07, 0xae, 0x66, 0xbd, 0xc5, 0xa3, 0x79, 0x37, 0x28, 0xa2, 0xa3, 0xdd, 0xb2,
+	0x68, 0x2b, 0x5f, 0x81, 0xe7, 0x33, 0x1e, 0x64, 0x65, 0x8a, 0xba, 0x70, 0x65, 0xec, 0x5b, 0xbc,
+	0x2c, 0x41, 0xf4, 0xc6, 0x24, 0x8f, 0xa6, 0xc5, 0x93, 0xe9, 0x75, 0xb9, 0x9c, 0xaf, 0x16, 0x94,
+	0x9f, 0x49, 0xe9, 0xc6, 0x86, 0x4f, 0xd3, 0xb2, 0x06, 0xbe, 0x03, 0x35, 0x2f, 0x35, 0xbd, 0xac,
+	0x89, 0xcb, 0xb8, 0xb1, 0xfd, 0x89, 0x92, 0x43, 0x4e, 0x96, 0x1c, 0x5c, 0xb5, 0x4f, 0xa4, 0x54,
+	0x5f, 0x7e, 0x09, 0x34, 0xfb, 0x55, 0x1e, 0xd0, 0xe8, 0x93, 0xc2, 0x4c, 0x85, 0x6e, 0x40, 0x35,
+	0xb9, 0x04, 0x84, 0x8a, 0x8c, 0xd0, 0xd1, 0x3a, 0xcc, 0xf2, 0xbc, 0xc5, 0xbe, 0x2e, 0x22, 0xd6,
+	0x03, 0x65, 0xdc, 0x7a, 0x10, 0xf1, 0xe2, 0x21, 0xc9, 0x84, 0x31, 0xc5, 0xa1, 0xca, 0xee, 0x5d,
+	0x40, 0xf6, 0xc8, 0x89, 0x20, 0xbf, 0x6e, 0x3a, 0xf9, 0x09, 0x73, 0x0a, 0x06, 0x77, 0x53, 0x0f,
+	0xa6, 0xe3, 0xba, 0x51, 0x5d, 0x34, 0xd5, 0xf6, 0x7c, 0x87, 0x88, 0x5d, 0x73, 0xd8, 0x46, 0xaf,
+	0xc1, 0x85, 0xc4, 0x12, 0xb6, 0x15, 0x9d, 0xb2, 0x8f, 0x76, 0x24, 0xce, 0xb2, 0xff, 0x29, 0xc1,
+	0xe5, 0xf4, 0x17, 0x89, 0x99, 0x01, 0x79, 0x00, 0x73, 0x7d, 0xce, 0xde, 0x1b, 0x4e, 0x97, 0x63,
+	0x97, 0xde, 0xd5, 0x51, 0x09, 0x9c, 0x0a, 0x33, 0xc6, 0xb7, 0xc5, 0xa7, 0xe2, 0xdb, 0xc8, 0xf6,
+	0xfb, 0x70, 0x31, 0x45, 0xa5, 0xd4, 0x2b, 0x88, 0x06, 0xa0, 0x11, 0x3f, 0x86, 0x8b, 0xc3, 0x68,
+	0xcf, 0x8d, 0xff, 0x87, 0xea, 0xf0, 0xc6, 0x16, 0x3d, 0x07, 0x17, 0xef, 0xe1, 0x56, 0x1b, 0xef,
+	0xdd, 0x5b, 0xd9, 0x63, 0xe5, 0xea, 0xda, 0xce, 0xda, 0xbd, 0xad, 0xa0, 0xe4, 0xc5, 0x4b, 0x5b,
+	0xad, 0x7b, 0x9b, 0x55, 0xe9, 0xc6, 0x06, 0x5c, 0x19, 0xbb, 0xa8, 0x51, 0x84, 0xe6, 0x6e, 0x73,
+	0x77, 0x73, 0xb9, 0x8d, 0xf7, 0xda, 0xef, 0x6e, 0xe3, 0x76, 0xb7, 0x1b, 0x20, 0x5c, 0x06, 0x84,
+	0xdb, 0xab, 0xbb, 0x1b, 0x4b, 0x09, 0xba, 0xb4, 0xbc, 0xf8, 0x87, 0x27, 0xf3, 0xd2, 0xe7, 0x4f,
+	0xe6, 0xa5, 0xc7, 0x4f, 0xe6, 0xa5, 0x1f, 0x7e, 0x31, 0x9f, 0xfb, 0xfc, 0x8b, 0xf9, 0xdc, 0x5f,
+	0xbe, 0x98, 0xcf, 0xbd, 0x57, 0x16, 0x8e, 0xfb, 0x6b, 0xfe, 0x42, 0x53, 0x38, 0x73, 0x93, 0xd3,
+	0xf6, 0x4b, 0xac, 0xf6, 0xfd, 0xbf, 0x7f, 0x07, 0x00, 0x00, 0xff, 0xff, 0xd2, 0x74, 0x27, 0xce,
+	0x30, 0x33, 0x00, 0x00,
 }
 
 func (m *Envelope) Marshal() (dAtA []byte, err error) {
@@ -8478,6 +8488,18 @@ func (m *TestRunFinished) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.Timestamp != nil {
+		{
+			size, err := m.Timestamp.MarshalToSizedBuffer(dAtA[:i])
+			if err != nil {
+				return 0, err
+			}
+			i -= size
+			i = encodeVarintMessages(dAtA, i, uint64(size))
+		}
+		i--
+		dAtA[i] = 0x12
+	}
 	if m.Success {
 		i--
 		if m.Success {
@@ -8694,20 +8716,20 @@ func (m *UriToLinesMapping) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	var l int
 	_ = l
 	if len(m.Lines) > 0 {
-		dAtA75 := make([]byte, len(m.Lines)*10)
-		var j74 int
+		dAtA76 := make([]byte, len(m.Lines)*10)
+		var j75 int
 		for _, num := range m.Lines {
 			for num >= 1<<7 {
-				dAtA75[j74] = uint8(uint64(num)&0x7f | 0x80)
+				dAtA76[j75] = uint8(uint64(num)&0x7f | 0x80)
 				num >>= 7
-				j74++
+				j75++
 			}
-			dAtA75[j74] = uint8(num)
-			j74++
+			dAtA76[j75] = uint8(num)
+			j75++
 		}
-		i -= j74
-		copy(dAtA[i:], dAtA75[:j74])
-		i = encodeVarintMessages(dAtA, i, uint64(j74))
+		i -= j75
+		copy(dAtA[i:], dAtA76[:j75])
+		i = encodeVarintMessages(dAtA, i, uint64(j75))
 		i--
 		dAtA[i] = 0x12
 	}
@@ -10859,6 +10881,10 @@ func (m *TestRunFinished) Size() (n int) {
 	_ = l
 	if m.Success {
 		n += 2
+	}
+	if m.Timestamp != nil {
+		l = m.Timestamp.Size()
+		n += 1 + l + sovMessages(uint64(l))
 	}
 	return n
 }
@@ -18530,6 +18556,42 @@ func (m *TestRunFinished) Unmarshal(dAtA []byte) error {
 				}
 			}
 			m.Success = bool(v != 0)
+		case 2:
+			if wireType != 2 {
+				return fmt.Errorf("proto: wrong wireType = %d for field Timestamp", wireType)
+			}
+			var msglen int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowMessages
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				msglen |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			if msglen < 0 {
+				return ErrInvalidLengthMessages
+			}
+			postIndex := iNdEx + msglen
+			if postIndex < 0 {
+				return ErrInvalidLengthMessages
+			}
+			if postIndex > l {
+				return io.ErrUnexpectedEOF
+			}
+			if m.Timestamp == nil {
+				m.Timestamp = &types.Timestamp{}
+			}
+			if err := m.Timestamp.Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+				return err
+			}
+			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
 			skippy, err := skipMessages(dAtA[iNdEx:])
